--- a/index.css
+++ b/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
   background-color: black;
+  text-align: center;
 }
 
 #par {
   color: white;
-  font-size: 80px;
+  font-size: 40px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
-  margin-top: 150px;
 }
